--- a/index.html
+++ b/index.html
@@ -1,114 +1,378 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Customer Care AI</title>
-<style>
-body {
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#0f0f0f;
-  color:white;
-}
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Customer Care AI Demo</title>
+  <style>
+    :root { color-scheme: dark; }
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      background: #0b0b0f;
+      color: #eaeaf2;
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+      padding: 24px;
+    }
+    .wrap {
+      width: min(980px, 100%);
+    }
+    h1 {
+      margin: 0 0 8px;
+      font-size: 34px;
+      letter-spacing: 0.2px;
+      text-align: center;
+    }
+    .sub {
+      margin: 0 0 20px;
+      text-align: center;
+      opacity: 0.8;
+    }
 
-.demo-content {
-  padding:60px;
-  text-align:center;
-}
+    /* Floating widget */
+    .widget {
+      position: fixed;
+      right: 18px;
+      bottom: 18px;
+      width: 340px;
+      max-width: calc(100vw - 36px);
+      background: #11121a;
+      border: 1px solid rgba(255,255,255,0.08);
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 18px 50px rgba(0,0,0,0.55);
+    }
+    .widgetHeader {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+      padding: 10px 12px;
+      background: #0f1017;
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+    }
+    .agentTitle {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-weight: 700;
+      font-size: 14px;
+    }
+    .dot {
+      width: 10px; height: 10px;
+      border-radius: 50%;
+      background: #3ddc84;
+      box-shadow: 0 0 0 4px rgba(61,220,132,0.12);
+    }
+    .controls {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+    }
+    .btn {
+      border: 1px solid rgba(255,255,255,0.10);
+      background: #151727;
+      color: #eaeaf2;
+      border-radius: 10px;
+      padding: 7px 10px;
+      font-size: 12px;
+      cursor: pointer;
+      user-select: none;
+    }
+    .btn:active { transform: translateY(1px); }
+    .btnPrimary {
+      background: #ff8a00;
+      border-color: rgba(0,0,0,0.15);
+      color: #1a1206;
+      font-weight: 700;
+    }
+    .btnDanger {
+      background: #221018;
+      border-color: rgba(255,99,132,0.25);
+      color: #ffb3c6;
+    }
 
-.widget {
-  position:fixed;
-  bottom:20px;
-  right:20px;
-  width:320px;
-  height:420px;
-  background:#1c1c1c;
-  border-radius:16px;
-  box-shadow:0 0 25px rgba(0,0,0,0.6);
-  overflow:hidden;
-  display:flex;
-  flex-direction:column;
-}
+    .media {
+      width: 100%;
+      height: 130px;
+      background: #0b0b0f;
+      display: grid;
+      place-items: center;
+    }
+    .media img {
+      width: 100%;
+      height: 130px;
+      object-fit: cover;
+      display: block;
+    }
 
-.agent-video {
-  width:100%;
-  height:180px;
-  background:black;
-}
+    .chat {
+      height: 270px;
+      overflow-y: auto;
+      padding: 10px 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .bubble {
+      max-width: 85%;
+      padding: 10px 10px;
+      border-radius: 14px;
+      line-height: 1.25;
+      font-size: 13px;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+      border: 1px solid rgba(255,255,255,0.08);
+    }
+    .you { align-self: flex-end; background: #171a2a; }
+    .agent { align-self: flex-start; background: #121423; }
+    .meta {
+      font-size: 11px;
+      opacity: 0.7;
+      margin-bottom: 4px;
+    }
 
-.agent-video video {
-  width:100%;
-  height:100%;
-  object-fit:cover;
-}
-
-.chat {
-  flex:1;
-  padding:15px;
-  overflow-y:auto;
-  font-size:14px;
-}
-
-.input-bar {
-  display:flex;
-  border-top:1px solid #333;
-}
-
-.input-bar input {
-  flex:1;
-  padding:10px;
-  border:none;
-  background:#111;
-  color:white;
-}
-
-.input-bar button {
-  padding:10px 15px;
-  border:none;
-  background:#ff9900;
-  font-weight:bold;
-  cursor:pointer;
-}
-</style>
+    .inputBar {
+      display: grid;
+      grid-template-columns: 1fr auto auto;
+      gap: 8px;
+      padding: 10px 12px;
+      border-top: 1px solid rgba(255,255,255,0.08);
+      background: #0f1017;
+    }
+    input[type="text"] {
+      width: 100%;
+      background: #0b0b0f;
+      border: 1px solid rgba(255,255,255,0.10);
+      color: #eaeaf2;
+      border-radius: 10px;
+      padding: 10px 10px;
+      font-size: 13px;
+      outline: none;
+    }
+    .hint {
+      font-size: 11px;
+      opacity: 0.65;
+      padding: 0 12px 12px;
+    }
+    .statusLine {
+      font-size: 11px;
+      opacity: 0.75;
+      padding: 8px 12px 0;
+    }
+    .kbd {
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace;
+      background: rgba(255,255,255,0.08);
+      border: 1px solid rgba(255,255,255,0.10);
+      padding: 2px 6px;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
-
-<div class="demo-content">
-  <h1>Customer Care AI Demo</h1>
-  <p>This site is powered by an intelligent conversational agent.</p>
-</div>
-
-<div class="widget">
-  <div class="agent-video">
-    <video autoplay muted loop>
-      <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-    </video>
+  <div class="wrap">
+    <h1>Customer Care AI Demo</h1>
+    <p class="sub">This site is powered by an intelligent conversational agent.</p>
   </div>
 
-  <div class="chat" id="chat">
-    <p><strong>Agent:</strong> G'day. How can I help you today?</p>
+  <div class="widget" role="dialog" aria-label="Customer Care AI Widget">
+    <div class="widgetHeader">
+      <div class="agentTitle">
+        <span class="dot" aria-hidden="true"></span>
+        <span>Agent</span>
+      </div>
+      <div class="controls">
+        <button class="btn" id="ttsBtn" title="Toggle voice out (text-to-speech)">Voice Out: Off</button>
+        <button class="btn" id="micBtn" title="Voice in (speech-to-text)">Mic</button>
+        <button class="btn btnDanger" id="clearBtn" title="Clear chat">Clear</button>
+      </div>
+    </div>
+
+    <div class="media">
+      <!-- Replace this with your own image later -->
+      <img src="https://images.unsplash.com/photo-1548199973-03cce0bbc87b?auto=format&fit=crop&w=1200&q=60" alt="Demo image" />
+    </div>
+
+    <div class="statusLine" id="statusLine">Status: Ready</div>
+
+    <div class="chat" id="chat"></div>
+
+    <div class="inputBar">
+      <input id="msg" type="text" placeholder="Type your question..." autocomplete="off" />
+      <button class="btn" id="sendBtn">Send</button>
+      <button class="btn btnPrimary" id="testBtn" title="Runs a quick backend test">Test</button>
+    </div>
+
+    <div class="hint">
+      Tip: press <span class="kbd">Enter</span> to send. Mic works best on Chrome/Edge.
+    </div>
   </div>
 
-  <div class="input-bar">
-    <input type="text" id="userInput" placeholder="Type your question...">
-    <button onclick="sendMessage()">Send</button>
-  </div>
-</div>
+  <script>
+    const chatEl = document.getElementById("chat");
+    const msgEl = document.getElementById("msg");
+    const sendBtn = document.getElementById("sendBtn");
+    const testBtn = document.getElementById("testBtn");
+    const clearBtn = document.getElementById("clearBtn");
+    const statusLine = document.getElementById("statusLine");
+    const micBtn = document.getElementById("micBtn");
+    const ttsBtn = document.getElementById("ttsBtn");
 
-<script>
-function sendMessage() {
-  const input = document.getElementById("userInput");
-  const chat = document.getElementById("chat");
+    let voiceOutEnabled = false;
+    let recognizing = false;
 
-  if(input.value.trim() === "") return;
+    function addBubble(who, text) {
+      const wrap = document.createElement("div");
+      const meta = document.createElement("div");
+      meta.className = "meta";
+      meta.textContent = who;
 
-  chat.innerHTML += "<p><strong>You:</strong> " + input.value + "</p>";
-  chat.innerHTML += "<p><strong>Agent:</strong> I'm a demo version. Voice integration coming next.</p>";
+      const bubble = document.createElement("div");
+      bubble.className = "bubble " + (who === "You" ? "you" : "agent");
+      bubble.textContent = text;
 
-  input.value = "";
-  chat.scrollTop = chat.scrollHeight;
-}
-</script>
+      wrap.appendChild(meta);
+      wrap.appendChild(bubble);
+      chatEl.appendChild(wrap);
+      chatEl.scrollTop = chatEl.scrollHeight;
+    }
 
+    function setStatus(text) {
+      statusLine.textContent = "Status: " + text;
+    }
+
+    function speak(text) {
+      if (!voiceOutEnabled) return;
+      if (!("speechSynthesis" in window)) return;
+
+      // Stop any previous speech to avoid overlap
+      window.speechSynthesis.cancel();
+
+      const u = new SpeechSynthesisUtterance(text);
+      u.rate = 1.0;
+      u.pitch = 1.0;
+      window.speechSynthesis.speak(u);
+    }
+
+    async function callAgent(message) {
+      setStatus("Thinking...");
+      try {
+        const r = await fetch("/api/chat", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ message })
+        });
+
+        const data = await r.json().catch(() => ({}));
+
+        if (!r.ok) {
+          const err = data?.error || ("HTTP " + r.status);
+          addBubble("Agent", "Server error: " + err);
+          setStatus("Error");
+          return;
+        }
+
+        const reply = data.reply || "(No reply field returned)";
+        addBubble("Agent", reply);
+        speak(reply);
+        setStatus("Ready");
+      } catch (e) {
+        addBubble("Agent", "Connection error calling /api/chat.");
+        setStatus("Offline");
+      }
+    }
+
+    async function onSend() {
+      const message = (msgEl.value || "").trim();
+      if (!message) return;
+      msgEl.value = "";
+      addBubble("You", message);
+      await callAgent(message);
+    }
+
+    // Quick test task (what you asked for in Vercel): confirms backend route works.
+    async function runTest() {
+      addBubble("You", "TEST: say hello");
+      await callAgent("Hello");
+    }
+
+    sendBtn.addEventListener("click", onSend);
+    testBtn.addEventListener("click", runTest);
+    clearBtn.addEventListener("click", () => {
+      chatEl.innerHTML = "";
+      setStatus("Ready");
+    });
+
+    msgEl.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") onSend();
+    });
+
+    // Voice IN (speech-to-text)
+    const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+    let recognition = null;
+
+    if (SpeechRecognition) {
+      recognition = new SpeechRecognition();
+      recognition.continuous = false;
+      recognition.interimResults = true;
+      recognition.lang = "en-AU";
+
+      recognition.onstart = () => {
+        recognizing = true;
+        micBtn.textContent = "Listening...";
+        setStatus("Listening");
+      };
+
+      recognition.onend = () => {
+        recognizing = false;
+        micBtn.textContent = "Mic";
+        setStatus("Ready");
+      };
+
+      recognition.onerror = (event) => {
+        addBubble("Agent", "Mic error: " + event.error);
+        setStatus("Mic error");
+      };
+
+      recognition.onresult = (event) => {
+        let interim = "";
+        let finalText = "";
+        for (let i = event.resultIndex; i < event.results.length; i++) {
+          const txt = event.results[i][0].transcript;
+          if (event.results[i].isFinal) finalText += txt;
+          else interim += txt;
+        }
+        msgEl.value = (finalText || interim).trim();
+      };
+
+      micBtn.addEventListener("click", () => {
+        if (!recognition) return;
+        try {
+          if (recognizing) recognition.stop();
+          else recognition.start();
+        } catch (e) {
+          addBubble("Agent", "Mic start failed (permissions/browser).");
+        }
+      });
+    } else {
+      micBtn.disabled = true;
+      micBtn.textContent = "Mic N/A";
+      micBtn.title = "SpeechRecognition not supported in this browser.";
+    }
+
+    // Voice OUT toggle
+    ttsBtn.addEventListener("click", () => {
+      voiceOutEnabled = !voiceOutEnabled;
+      ttsBtn.textContent = "Voice Out: " + (voiceOutEnabled ? "On" : "Off");
+      if (!("speechSynthesis" in window)) {
+        addBubble("Agent", "This browser doesn't support voice out.");
+      }
+    });
+
+    // Boot message
+    addBubble("Agent", "G’day. Type a message, or tap Mic. Then click Test to confirm backend is wired.");
+  </script>
 </body>
 </html>
