--- a/index.html
+++ b/index.html
@@ -1,116 +1,218 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Customer Care AI</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#0b0b0f" />
+  <title>Customer Care AI — Demo</title>
 
-<style>
-body {
-  margin:0;
-  font-family:Arial, sans-serif;
-  background:#0b0f14;
-  color:white;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
-}
+  <style>
+    :root{
+      --bg:#0b0b0f;
+      --panel:rgba(20,22,30,.72);
+      --border:rgba(255,255,255,.14);
+      --text:#e9e9ee;
+      --muted:rgba(233,233,238,.72);
+      --accent:#ffa500;
+      --shadow:0 22px 60px rgba(0,0,0,.55);
+      --radius:22px;
+      --font: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Helvetica Neue", Helvetica;
+    }
 
-.container {
-  width:90%;
-  max-width:500px;
-  background:#111827;
-  padding:30px;
-  border-radius:12px;
-  box-shadow:0 0 30px rgba(0,0,0,0.5);
-}
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:var(--font);
+      background: radial-gradient(1200px 800px at 70% 20%, rgba(255,165,0,.10), transparent 55%),
+                  radial-gradient(900px 600px at 20% 80%, rgba(120,200,255,.08), transparent 55%),
+                  var(--bg);
+      color:var(--text);
+      overflow-x:hidden;
+    }
 
-h1 {
-  text-align:center;
-  margin-bottom:20px;
-}
+    .wrap{
+      min-height:100%;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:40px 18px;
+    }
 
-.chat-box {
-  height:300px;
-  overflow-y:auto;
-  background:#0f172a;
-  padding:15px;
-  border-radius:8px;
-  margin-bottom:15px;
-  font-size:14px;
-}
+    .stage{
+      width:min(1100px, 100%);
+      display:grid;
+      grid-template-columns: 1.2fr .8fr;
+      gap:22px;
+      align-items:stretch;
+    }
 
-button {
-  width:100%;
-  padding:12px;
-  border:none;
-  border-radius:8px;
-  background:#f97316;
-  color:white;
-  font-size:16px;
-  cursor:pointer;
-}
+    @media (max-width: 920px){
+      .stage{grid-template-columns:1fr; }
+    }
 
-button:hover {
-  background:#ea580c;
-}
-</style>
+    .card{
+      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.03));
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:26px;
+      position:relative;
+      overflow:hidden;
+    }
+
+    .card::before{
+      content:"";
+      position:absolute; inset:-2px;
+      background: radial-gradient(500px 220px at 20% 0%, rgba(255,165,0,.18), transparent 55%);
+      pointer-events:none;
+    }
+
+    h1{
+      margin:0 0 10px;
+      font-size:38px;
+      letter-spacing:-.6px;
+      position:relative;
+      z-index:1;
+    }
+
+    p{
+      margin:0;
+      color:var(--muted);
+      line-height:1.5;
+      font-size:15px;
+      position:relative;
+      z-index:1;
+    }
+
+    .pillrow{
+      margin-top:16px;
+      display:flex; flex-wrap:wrap; gap:10px;
+      position:relative; z-index:1;
+    }
+
+    .pill{
+      border:1px solid var(--border);
+      background:rgba(0,0,0,.25);
+      padding:8px 10px;
+      border-radius:999px;
+      font-size:12px;
+      color:rgba(233,233,238,.82);
+      display:flex; gap:8px; align-items:center;
+    }
+
+    .dot{
+      width:10px; height:10px; border-radius:50%;
+      background:var(--accent);
+      box-shadow:0 0 18px rgba(255,165,0,.55);
+    }
+
+    /* Widget dock (right side) */
+    .dock{
+      position:relative;
+      min-height:360px;
+      padding:0;
+    }
+
+    /* Make the widget feel “installed” in a common WP-style box */
+    .wpbox{
+      border-radius:var(--radius);
+      border:1px solid var(--border);
+      background:rgba(0,0,0,.22);
+      height:100%;
+      overflow:hidden;
+      position:relative;
+    }
+
+    .wphead{
+      padding:12px 14px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      border-bottom:1px solid rgba(255,255,255,.10);
+      background:rgba(0,0,0,.22);
+      font-size:12px;
+      color:rgba(233,233,238,.78);
+    }
+
+    .wphead strong{color:rgba(233,233,238,.92); font-weight:600}
+    .wpbody{
+      padding:14px;
+      height:calc(100% - 45px);
+    }
+
+    /* This is where your existing widget JS will mount itself (if it does) */
+    #ccai-mount{
+      height:100%;
+      width:100%;
+      position:relative;
+    }
+
+    /* Safe fallback message if widget fails to load */
+    .fallback{
+      height:100%;
+      border:1px dashed rgba(255,255,255,.18);
+      border-radius:16px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:16px;
+      text-align:center;
+      color:rgba(233,233,238,.70);
+      font-size:13px;
+    }
+
+    .footerhint{
+      margin-top:14px;
+      font-size:12px;
+      color:rgba(233,233,238,.60);
+    }
+  </style>
 </head>
 
 <body>
+  <div class="wrap">
+    <div class="stage">
+      <section class="card">
+        <h1>Customer Care AI Demo</h1>
+        <p>
+          This page is a clean “sales demo” shell. The widget should appear in the right-hand box.
+          If it stays empty, we’ll check the script path next.
+        </p>
 
-<div class="container">
-  <h1>Customer Care AI</h1>
-  <div class="chat-box" id="chat"></div>
-  <button onclick="startListening()">🎤 Speak</button>
-</div>
+        <div class="pillrow">
+          <div class="pill"><span class="dot"></span> Voice-ready</div>
+          <div class="pill"><span class="dot"></span> Keyboardless flow</div>
+          <div class="pill"><span class="dot"></span> Universal embed</div>
+        </div>
 
-<script>
-const chat = document.getElementById("chat");
+        <div class="footerhint">
+          Tip: after you commit, open the live site again and hard refresh (reload).
+        </div>
+      </section>
 
-function addMessage(text, sender) {
-  const msg = document.createElement("div");
-  msg.innerText = sender + ": " + text;
-  chat.appendChild(msg);
-  chat.scrollTop = chat.scrollHeight;
-}
+      <aside class="card dock">
+        <div class="wpbox">
+          <div class="wphead">
+            <strong>Website Contact Box</strong>
+            <span>Powered by Customer Care AI</span>
+          </div>
+          <div class="wpbody">
+            <div id="ccai-mount">
+              <div class="fallback">
+                If you can read this, the page loaded.<br/>
+                If the widget doesn’t appear, the script path isn’t loading yet.
+              </div>
+            </div>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </div>
 
-function speak(text) {
-  const speech = new SpeechSynthesisUtterance(text);
-  speech.lang = "en-US";
-  window.speechSynthesis.speak(speech);
-}
-
-async function sendToAI(text) {
-  addMessage(text, "You");
-
-  const response = await fetch("/api/chat", {
-    method:"POST",
-    headers:{"Content-Type":"application/json"},
-    body: JSON.stringify({message:text})
-  });
-
-  const data = await response.json();
-
-  addMessage(data.reply, "AI");
-  speak(data.reply);
-}
-
-function startListening() {
-  const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-  recognition.lang = "en-US";
-  recognition.start();
-
-  recognition.onresult = function(event) {
-    const transcript = event.results[0][0].transcript;
-    sendToAI(transcript);
-  };
-
-  recognition.onerror = function(event) {
-    addMessage("Microphone error: " + event.error, "System");
-  };
-}
-</script>
-
+  <!-- IMPORTANT:
+       This assumes your existing widget code is in /api/chat.js (you have an /api folder).
+       If your widget expects a different file name, we’ll change this ONE line. -->
+  <script src="/api/chat.js"></script>
 </body>
 </html>
