--- a/index.html
+++ b/index.html
@@ -215,140 +215,5 @@
        If your widget expects a different file name, we’ll change this ONE line. -->
   <script src="/api/chat.js"></script>
 </body>
-</html>import os
-import time
-import math
-import random
-import threading
-import psutil
-from scapy.all import sniff
-
-# --- TERMINAL CONFIG ---
-W, H = 100, 50 # Expanded for deep detail
-RED, CYAN, GREEN, WHITE, GREY, RESET = "\033[91m", "\033[96m", "\033[92m", "\033[97m", "\033[90m", "\033[0m"
-SHADE = "@%#*+=-:. "
-
-# --- ENGINE DATA ---
-cpu_load = 0
-particles = []
-net_logs = []
-
-def update_sys():
-    global cpu_load
-    while True:
-        cpu_load = psutil.cpu_percent(interval=0.5)
-
-def packet_handler(pkt):
-    global net_logs, particles
-    if pkt.haslayer('IP'):
-        net_logs.append(f"INBOUND_{pkt['IP'].src}")
-        if len(net_logs) > 15: net_logs.pop(0)
-        # Create a particle burst in a random location
-        for _ in range(3):
-            particles.append([random.randint(0, W), random.randint(0, H), random.uniform(-1, 1), 1.0])
-
-def draw_line(buffer, x0, y0, x1, y1, char):
-    """Bresenham's Line Algorithm for terminal wireframes."""
-    dx, dy = abs(x1 - x0), abs(y1 - y0)
-    sx, sy = 1 if x0 < x1 else -1, 1 if y0 < y1 else -1
-    err = dx - dy
-    while True:
-        if 0 <= x0 < W and 0 <= y0 < H:
-            buffer[y0][x0] = char
-        if x0 == x1 and y0 == y1: break
-        e2 = 2 * err
-        if e2 > -dy: err -= dy; x0 += sx
-        if e2 < dx: err += dx; y0 += sy
-
-def get_monster(t):
-    """Procedural breathing entity."""
-    s = math.sin(t * 2) * 2
-    eye_l = "👁" if s > 0 else "x"
-    mouth = "═" * int(5 + s)
-    return [
-        f"  .──.  .──.  ",
-        f" (  {eye_l}  )(  {eye_l}  ) ",
-        f"  \    {mouth}    /  ",
-        f"   \ {mouth} /   ",
-        f"    '────'    "
-    ]
-
-def render():
-    angle_x = angle_y = 0
-    dx1, dy1 = W//2 - 15, H//2 - 10
-    dx2, dy2 = dx1 + 30, dy1 + 20
-
-    while True:
-        angle_x += 0.04 + (cpu_load / 600)
-        angle_y += 0.02
-        buffer = [[" " for _ in range(W)] for _ in range(H)]
-        
-        # 1. Background Particle Physics
-        for p in particles[:]:
-            p[0] += p[2]
-            p[1] += 0.2 # Gravity
-            p[3] -= 0.02 # Fade
-            if p[3] <= 0: particles.remove(p)
-            else:
-                ix, iy = int(p[0]), int(p[1])
-                if 0 <= ix < W and 0 <= iy < H:
-                    buffer[iy][ix] = f"{GREY}.{RESET}"
-
-        # 2. The 3D Cube (Wireframe Mode)
-        nodes = []
-        for x, y, z in [(-1,-1,-1), (1,-1,-1), (1,1,-1), (-1,1,-1), (-1,-1,1), (1,-1,1), (1,1,1), (-1,1,1)]:
-            # Rotate X
-            ny = y * math.cos(angle_x) - z * math.sin(angle_x)
-            nz = y * math.sin(angle_x) + z * math.cos(angle_x)
-            y, z = ny, nz
-            # Rotate Y
-            nx = x * math.cos(angle_y) + z * math.sin(angle_y)
-            nz = -x * math.sin(angle_y) + z * math.cos(angle_y)
-            # Project to 2D
-            scale = 25 / (nz + 4)
-            px = int(W/2 + nx * scale * 2)
-            py = int(H/2 + ny * scale)
-            nodes.append((px, py, nz))
-
-        edges = [(0,1),(1,2),(2,3),(3,0),(4,5),(5,6),(6,7),(7,4),(0,4),(1,5),(2,6),(3,7)]
-        for e1, e2 in edges:
-            # Depth coloring: Further edges are darker
-            z_avg = (nodes[e1][2] + nodes[e2][2]) / 2
-            color = CYAN if z_avg < 0 else f"\033[38;5;24m"
-            draw_line(buffer, nodes[e1][0], nodes[e1][1], nodes[e2][0], nodes[e2][1], f"{color}#{RESET}")
-
-        # 3. The Central Portal (With Occlusion)
-        for y in range(dy1, dy2):
-            for x in range(dx1, dx2):
-                if y == dy1 or y == dy2-1 or x == dx1 or x == dx2-1:
-                    buffer[y][x] = f"{WHITE}█{RESET}"
-                else:
-                    buffer[y][x] = " " # Clear the inside for the monster
-
-        # 4. The Monster (Breathing Animation)
-        monster = get_monster(time.time())
-        for i, line in enumerate(monster):
-            for j, c in enumerate(line):
-                mx, my = dx1 + 15 - len(line)//2 + j, dy1 + 10 - len(monster)//2 + i
-                if 0 <= mx < W and 0 <= my < H:
-                    buffer[my][mx] = f"{RED}{c}{RESET}"
-
-        # 5. Output Construction
-        output = "\033[H"
-        for row in buffer:
-            output += "".join(row) + "\n"
-        
-        # HUD Information
-        hud = f" [ ABYSSAL_SINGULARITY ] [ LOAD: {cpu_load}% ] [ ENTITIES: {len(particles)} ] "
-        print(output + hud.center(W, "═"))
-        time.sleep(0.02)
-
-if __name__ == "__main__":
-    os.system('cls' if os.name == 'nt' else 'clear')
-    threading.Thread(target=update_sys, daemon=True).start()
-    threading.Thread(target=lambda: sniff(prn=packet_handler, filter="ip", store=0), daemon=True).start()
-    try:
-        render()
-    except KeyboardInterrupt:
-        print(f"\n{RED}SYSTEM_SINGULARITY_TERMINATED.{RESET}")
+</html>
 
